// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ratio 1:1 generates a valid rectangle 1`] = `
Object {
  "height": 759,
  "width": 759,
  "x": 34,
  "y": 37,
}
`;

exports[`ratio 4:3 generates a valid rectangle 1`] = `
Object {
  "height": 630.75,
  "width": 841,
  "x": 34,
  "y": 37,
}
`;

exports[`ratio 5:2 generates a valid rectangle 1`] = `
Object {
  "height": 336.4,
  "width": 841,
  "x": 34,
  "y": 131.8,
}
`;

exports[`ratio 9:16 generates a valid rectangle 1`] = `
Object {
  "height": 759,
  "width": 426.9375,
  "x": 186.53125,
  "y": 37,
}
`;

exports[`ratio 16:9 generates a valid rectangle 1`] = `
Object {
  "height": 473.0625,
  "width": 841,
  "x": 34,
  "y": 63.46875,
}
`;

exports[`ratio 90:195 generates a valid rectangle 1`] = `
Object {
  "height": 759,
  "width": 350.3076923076923,
  "x": 224.84615384615387,
  "y": 37,
}
`;
